--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ setInterval(createRose, 300);
 <div class="container">
     <h2>🌹 Happy Rose Day Duggu 🌹</h2>
 
-    <img src="data:image/jpeg;base64,{{BASE64_IMAGE}}">
+    <img src=""C:\Users\rebal\Downloads\WhatsApp Image 2026-02-06 at 23.35.13.jpeg"">
 
     <p>
         To the most special girl in my life ❤️ <br>
@@ -105,9 +105,10 @@ setInterval(createRose, 300);
     <div id="message">
         💖 Happy Rose Day to my favorite person!<br><br>
         You are my happiness, my smile, my everything 🌹<br><br>
-        – With Love, <b>Aman</b>
+        – With Love, <b>Your's Mishri</b>
     </div>
 </div>
 
 </body>
 </html>
+
